<resources>
    <string name="app_name">Ez Ultimate</string>
    <string name="title_activity_topics">TopicsActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>

    <string name="discard_btn">Odrzuć</string>

    <string name="statistics_questions_label">Pytań</string>
    <string name="statistics_correct_label">Poprawne odpowiedzi</string>
    <string name="statistics_score_label">Punkty</string>
    <string name="title_activity_score_board">ScoreBoardActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="popup_statistics_info">Czy chcesz zapisać swój wynik?</string>
    <string name="popup_statistics_insert_name">Nick:</string>
    <string name="popup_statistics_send_btn">Wyślij</string>
    <string name="popup_statistics_score_info">Zebrane punkty:</string>
    <string name="popup_statistics_empty_nick_alert">Wpisana nazwa nie może być pusta!</string>

    <string name="quiz_resolve_random_fragment_option">Random</string>
    <string name="quiz_resolve_learn_fragment_option">Nauka</string>
    <string name="quiz_resolve_test_fragment_option">Test</string>
    <string name="quiz_resolve_tmp_fragment_option">Opcja</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>
